--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@supabase/supabase-js": "^2.46.1",
     "@types/react-native": "^0.73.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
