--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.46.1",
+    "@types/d3-shape": "^3.1.6",
     "@types/react-native": "^0.73.0",
+    "d3-shape": "^3.2.0",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
@@ -36,10 +38,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
