--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.46.1",
     "@types/d3-shape": "^3.1.6",
     "@types/react-native": "^0.73.0",
+    "buffer": "^6.0.3",
     "d3-shape": "^3.2.0",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
