--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "d3-shape": "^3.2.0",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
+    "expo-camera": "^13.4.4",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -47,8 +48,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
-    "react-native-web": "~0.19.10",
-    "expo-camera": "~15.0.16"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
