--- a/app.json
+++ b/app.json
@@ -37,6 +37,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "assets": [
+      "assets/tfjs_model/model.json",
+      "assets/tfjs_model/group1-shard1of4.bin",
+      "assets/tfjs_model/group1-shard2of4.bin",
+      "assets/tfjs_model/group1-shard3of4.bin",
+      "assets/tfjs_model/group1-shard4of4.bin"
+    ]
   }
 }
