--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@shopify/react-native-skia": "^1.0.3",
     "@supabase/supabase-js": "^2.46.1",
     "@types/d3-shape": "^3.1.6",
     "@types/react-native": "^0.73.0",
     "buffer": "^6.0.3",
+    "d3-array": "^3.2.4",
+    "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
+    "d3-time": "^3.1.0",
+    "d3-time-format": "^4.1.0",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -39,14 +45,15 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-charts-wrapper": "^0.6.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "~0.19.10",
-    "expo-camera": "~15.0.16"
+    "victory-native": "^40.1.0",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
